--- a/Relatorios/FiltroRelatorio/ReportRelatorioCliente.rdlc
+++ b/Relatorios/FiltroRelatorio/ReportRelatorioCliente.rdlc
@@ -189,7 +189,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!Ativo.Value</Value>
+                              <Value>=IIf(Fields!Ativo.Value = false, "Não","Sim")</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -208,6 +208,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
