Digitação de pedidos, Relatorio de pedido e layout dos relatorios.

--- a/Relatorios/Designer/ReportRelatorioCliente.rdlc
+++ b/Relatorios/Designer/ReportRelatorioCliente.rdlc
@@ -6,19 +6,19 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>5.27509cm</Width>
+              <Width>2.13276cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.68759cm</Width>
+              <Width>6.82992cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>5.36738cm</Width>
+              <Width>4.83821cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>3.87583cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>4.03459cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -272,7 +272,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -407,7 +406,7 @@
         <Top>0.17639cm</Top>
         <Left>0.34078cm</Left>
         <Height>1.35876cm</Height>
-        <Width>19.33006cm</Width>
+        <Width>21.71131cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -423,10 +422,10 @@
       <BackgroundColor>LightGrey</BackgroundColor>
     </Style>
   </Body>
-  <Width>7.76526in</Width>
+  <Width>8.68193in</Width>
   <Page>
     <PageHeader>
-      <Height>2.95319cm</Height>
+      <Height>2.73403cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -518,7 +517,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Left>4.97417cm</Left>
-          <Height>2.88263cm</Height>
+          <Height>2.55764cm</Height>
           <Width>8.71771cm</Width>
           <ZIndex>1</ZIndex>
           <Style>
@@ -575,8 +574,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox8</rd:DefaultName>
-          <Top>1.51562cm</Top>
-          <Left>17.53584cm</Left>
+          <Top>1.26118cm</Top>
+          <Left>19.91709cm</Left>
           <Height>1.43757cm</Height>
           <Width>2.135cm</Width>
           <ZIndex>2</ZIndex>
@@ -590,6 +589,21 @@
             <PaddingBottom>2pt</PaddingBottom>
           </Style>
         </Textbox>
+        <Image Name="Image2">
+          <Source>Embedded</Source>
+          <Value>ID32251301404511524</Value>
+          <Sizing>FitProportional</Sizing>
+          <Top>0.03087cm</Top>
+          <Left>20.55209cm</Left>
+          <Height>1.08479cm</Height>
+          <Width>1.5cm</Width>
+          <ZIndex>3</ZIndex>
+          <Style>
+            <Border>
+              <Style>None</Style>
+            </Border>
+          </Style>
+        </Image>
       </ReportItems>
       <Style>
         <Border>
